add name and structlog
